made python file to create csv file instead of json file

--- a/data-visuals/index.html
+++ b/data-visuals/index.html
@@ -7,4 +7,4 @@
 <!-- Create a div where the graph will take place -->
 <div id="my_dataviz"></div>
 
-<script src="data.js"></script>
+<script src="script.js"></script>
