--- a/data-visuals/index.html
+++ b/data-visuals/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<meta charset="utf-8">
+<meta charset="utf-8" />
 
 <!-- Load d3.js -->
 <script src="https://d3js.org/d3.v4.js"></script>
