--- a/data-visuals/index.html
+++ b/data-visuals/index.html
@@ -1,10 +1,29 @@
 <!DOCTYPE html>
-<meta charset="utf-8" />
+<html>
+    <head>
+        <meta charset="utf-8" />
+        <!-- Load d3.js -->
+        <script src="https://d3js.org/d3.v4.js"></script>
+        <style>
+            .grid-container {display: grid; grid-template-columns: auto auto auto auto;}
+        </style>
+    </head>
+    <body>
+        <div class="grid-container">
+            <!-- Create a div where the graph will take place -->
+            <div class="grid-item" id="airTemperature">airTemperature</div>
+            <div class="grid-item" id="gust">gust</div>
+            <div class="grid-item" id="humidity">humidity</div>
+            <div class="grid-item" id="uvIndex">uvIndex</div>
+            <div class="grid-item" id="windSpeed">windSpeed</div>
+        </div>
 
-<!-- Load d3.js -->
-<script src="https://d3js.org/d3.v4.js"></script>
+        <script src="./d3-scripts/airTemperature.js"></script>
+        <script src="./d3-scripts/gust.js"></script>
+        <script src="./d3-scripts/humidity.js"></script>
+        <script src="./d3-scripts/uvIndex.js"></script>
+        <script src="./d3-scripts/windSpeed.js"></script>
+    </body>
+</html>
 
-<!-- Create a div where the graph will take place -->
-<div id="my_dataviz"></div>
 
-<script src="script.js"></script>
