--- a/data-visuals/index.html
+++ b/data-visuals/index.html
@@ -18,6 +18,7 @@
             <div class="grid-item" id="windSpeed">windSpeed</div>
         </div>
 
+        <!-- Reference d3 scripts -->
         <script src="./d3-scripts/airTemperature.js"></script>
         <script src="./d3-scripts/gust.js"></script>
         <script src="./d3-scripts/humidity.js"></script>
